css/staff.css
section.staff{
	background-color: var(--bg2-color);
	padding: 5rem 5rem;
}

div.staffBox {
	width: 80%;
	display: flex;
	flex-direction: row;
	flex-wrap: wrap;
	align-content: center;
	justify-content:space-around;
	align-items: center;
	align-self: center;
	margin: auto;
}

div.staffCard {
	position: relative;
	z-index: 1;
	overflow: visible;
	margin-bottom: 1rem;
	margin-top: 1rem;
	margin-left: 0.5rem;
	margin-right: 0.5rem;
	transform: scale(1.0);
	transition: transform 0.4s cubic-bezier(0.1, 0.9, 0.9, 0.9);
	box-shadow: 0 0 0.5rem -0.1rem rgba(0, 0, 0, 0.3);
}

@media (hover: hover) {
	div.staffCard:hover {
		transform: scale(1.05) rotate(1deg) translate(0px, -0.5rem);
		z-index: 5;
	}
	div.staffCard>div.image{
		filter: grayscale(80%);
	}
	div.staffCard:hover>div.image{
		/* Takes filter off if staffCard hovered */
		filter:grayscale(0%);
	}
}


div.staffCard>div.card_contents{
	background-color: var(--bg2-color);
	text-align: center;
	color: var(--text-color);
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 0.5rem;
	margin-top: 0;
	padding-left: 0.5rem;
	padding-right: 0.5rem;
}

div.staffCard>div.image{
	object-fit: cover;
	transform: scale(1.0);
	margin-bottom: 0;
	transition: filter 0.4s cubic-bezier(0.1, 0.9, 0.9, 0.9);
}

div.staffCard>div.image>img {
	margin: auto;
	width: 100%;
}

/* Name Styling */
div.card_contents>h2 {
	color: var(--accent-color);
	font-family: 'Fortzilla', sans-serif;
	text-shadow: 0.07em 0.07em var(--accent-shadow-color);
	font-size: 1.7rem;
	text-align: center;
	margin-bottom: 0.7rem;
	margin-top: 0.5rem;
}

/* Position Styling */
.title {
	color: var(--text-color);
	font-family: 'Pixel', sans-serif;
	text-shadow: 0.07em 0.07em var(--text-shadow-color);
	font-size: 1.3rem;
	text-align: center;
}

/* Flavor Text Styling*/
.flavor {
	color: var(--text-color);
	font-size: 1.3rem;
	padding-bottom: 0.0rem;
}

